2.7.4
- Add - Add support for the new Artwork available from fanart.tv(HD Music Logos, Music Banners)

2.7.3
- Fix - Change LF to CRLF in missing.txt file
- Fix - keep script functioning with XBMC Development Master
- Add - script can be started in artwork auto download modes, modes - autocdart, autocover, autofanart, autologo, autothumb, autoall

2.7.2
- Change - code cleanup
- Fix - Update Database was not properly updating All Artist Id
- Fix - Modify Database menu movement was not proper

2.7.1
- Fix - JSONRPC erros
- Fix - Manual MBID entry did not work as intended
- Fix - Corrected MusicBrainz access

2.7.0
- Add - 'Edit by Artist' and 'Edit by Album' functions on Modify Database tab
- Add - Change MBIDs for both Artists and albums.  3 methods available - Manually Change the MBID, Manual Search MusicBrainz, Automatic Search using XBMC supplied info(the search provides upto 10 matches)
- Add - 'Find Missing MBIDs' for Albums and Artists
- Add - 'Refresh MBIDs - Automatic' For Albums and Artist, keeps database current with MusicBrainz
- Add - Setting to enable 'Refresh MBIDs' during database update - This will cause the script to take a while to update the database since it checks all MBIDs
- Add - Ability to Disable saving of missing.txt file
- Change - Redo some of the menu animations, allowing for more levels to the Advanced menu
- Fix - properly fix saving of missing.txt file to a VFS folder
- Add - Change MBID for Albums and Artists
- Change - moved matching of recognized artists to the start of the script, so it is only done once per run of program(also will run after a database update) 

2.6.9
- Fix - Properly handle VFS file paths for saving missing.txt
- Fix - Properly display Progress Dialog when saving missing.txt
- Add - Provide Progress Dialog for Updating Thumbnails and Fanart

2.6.8
- Fix - in missing.txt show albums missing all artwork
- Fix - in missing.txt don't show albums that have all artwork
- Fix - one to many periods

2.6.7