@@ -170,7 +170,7 @@
   <string id="32165">Enter Album title to search</string>
   <string id="32166">Select Album</string>
   <string id="32167">Enter Album MBID - Including dashes(36 Characters)</string>
-  <string id="32168">Artist Banners"</string>
+  <string id="32168">Artist Banners</string>
   <string id="32169">400 X 155</string>
   <string id="32170">800 X 310</string>
   <string id="32171">Enable HD Music LOGOs</string>
